--- a/trafegoespacial/src/main/webapp/manterPlanoVoo.xhtml
+++ b/trafegoespacial/src/main/webapp/manterPlanoVoo.xhtml
@@ -47,13 +47,25 @@
 			</h:panelGrid>
 			<h:panelGrid columns="3" style="margin-bottom:10px" cellpadding="5">
 
-				<p:commandButton value="Excluir" update="singleDT"
-					action="#{planoVooController.excluir}" icon="ui-icon-trash" />
+				<p:commandButton value="Excluir" 
+					onclick="PF('excluirManualDialog').show() " icon="ui-icon-trash" />
 				<p:commandButton value="Novo" action="cadastroPlanoVoo"
 					icon="ui-icon-check" />
 			</h:panelGrid>
 
-		<p:dialog header="Plano de Voo" widgetVar="carDialog" id="idcarDialog" modal="true"  resizable="false">
+			<p:confirmDialog id="excluirMensagemModal" width="500"
+				header="Confirmação de exclusão" severity="alert"
+				widgetVar="excluirManualDialog" closable="false" appendToBody="true">
+				<f:facet name="message">
+					<h:outputFormat value="Confirmar Exclusão?" />
+				</f:facet>
+
+				<p:commandButton value="Sim"  update="@form" oncomplete="PF('excluirManualDialog').hide()"
+					action="#{planoVooController.excluir}"/>
+				<p:commandButton value="Não" onclick="excluirManualDialog.hide()" />
+			</p:confirmDialog>
+
+			<p:dialog header="Plano de Voo" widgetVar="carDialog" id="idcarDialog" modal="true"  resizable="false">
 	        <p:outputPanel id="carDetail">
 	            <p:panelGrid  columns="1"  >
 		            <p:panel>
