--- a/trafegoespacial/src/main/webapp/cadastroPlanoVoo.xhtml
+++ b/trafegoespacial/src/main/webapp/cadastroPlanoVoo.xhtml
@@ -16,7 +16,7 @@
   			<p:growl id="growl" showDetail="true" sticky="true" />  
 			<p:messages autoUpdate="true" />
 
-			<h:panelGrid columns="6" style="margin-bottom:10px" cellpadding="5">
+			<h:panelGrid columns="8" style="margin-bottom:10px" cellpadding="5">
 
 				<p:outputLabel for="planeta" value="Paneta:" />
 				<p:selectOneMenu id="planeta" style="width:150px"
@@ -36,11 +36,15 @@
 						itemLabel="#{nave.name}" itemValue="#{nave.url}" />
 
 				</p:selectOneMenu>
+				
+				 <p:outputLabel for="datetime" value="Data/Horário:" />
+        		<p:calendar id="datetime" value="#{planoVooController.dataVoo}" pattern="MM/dd/yyyy HH:mm" />
+ 
 
 
 			</h:panelGrid>
 			<h:panelGrid columns="10" style="margin-bottom:10px" cellpadding="5">
-				<p:dataTable var="plano" id="singleDT" value="#{planoVooController.listaTripulante}" 
+				<p:dataTable var="plano" id="singleDT" value="#{planoVooController.listaTripulante}"  paginator="true" rows="10"
 				                                   selection="#{planoVooController.listaTripulanteSelected}" rowKey="#{plano.url}" >
 						<f:facet name="header">Tripulantes</f:facet>
 	        			<p:column selectionMode="multiple" style="width:16px;text-align:center"/>
